# workspaces/service/src/tsoa/openapi.json
@@ -246,6 +246,30 @@
 			"CreateMealParams": {
 				"$ref": "#/components/schemas/Omit_Parameters_SagebookDatabase-at-meals_91_createMeal_93___91_0_93_.ownerEmail_"
 			},
+			"SagebookError": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"stack": {
+						"type": "string"
+					},
+					"code": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"message",
+					"code"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"LoginBody": {
 				"properties": {
 					"email": {
@@ -1703,16 +1727,29 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "string",
-									"enum": [
-										"Success",
-										"Invalid login credentials"
-									]
+									"properties": {
+										"token": {}
+									},
+									"required": [
+										"token"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Invalid Credentials",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SagebookError"
 								}
 							}
 						}
 					}
 				},
+				"description": "Success response will send token in body",
 				"security": [],
 				"parameters": [],
 				"requestBody": {
